@@ -1,3 +1,8 @@
+[v9r3-pre2]
+use DIRAC v6r20p11
+
+* Worfklow: several fixes for uploading Error stats for MC jobs
+
 [v9r3-pre1]
 use DIRAC v6r20p11
 
